Fri Jul  9 12:36:46 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* findvar.c, defs.h
	({extract,store}_{signed_integer,unsigned_integer,address}):
	New routines to replace SWAP_TARGET_AND_HOST.
	All over: All uses of SWAP_TARGET_AND_HOST on integers replaced.

	* config/sparc/tm-sparc.h: Add comment suggesting that removing
	ins and locals from the registers array might clean things up.

	* utils.c: Clean up comments about wrap buffer and wrap_here.
	* printcmd.c (printf_command): Call wrap_here before vprintf.

	* mipsread.c (cross_ref): Set the name to unknown for "struct *" case.
	Patch from ptf@delcam.co.uk (Paul Flinders).

	* a29k-tdep.c, findvar.c (get_saved_register): Fix byteswapping sins.

Fri Jul  9 09:47:02 1993  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* defs.h, remote-eb.c (TM_FILE_OVERRIDE):  Remove it.
	* mips-tdep.c (init_extra_frame_info):  Set proper fci->frame if pc
	is at the start of the dummy code.

Thu Jul  8 14:48:54 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* sparc-tdep.c (sparc_push_dummy_frame): Skip all the do_save_insn
	stuff, just write the sp and fp.
	(sparc_pop_frame): Skip the do_restore_insn; we already restore
	the sp with the other out registers.

	* hppa-tdep.c (hppa_push_arguments): Allocate enough space for
	arguments.

	* hppa-tdep.c: Change _initialize_hppab_tdep to _initialize_hppa_tdep.

Thu Jul  8 08:22:05 1993  Doug Evans  (dje@canuck.cygnus.com)

	* config/h8300/tm-h8300.h: (REGISTER_TYPES): Adjust for h8/300h.
	(REGISTER_RAW_SIZE): Ditto.
	(REGISTER_VIRTUAL_TYPE): Use builtin_type_unsigned_long for regs
	on the h8/300h (ints may still be 16 bits).
	(EXTRACT_RETURN_VALUE, STORE_RETURN_VALUE,
	EXTRACT_STRUCT_VALUE_ADDRESS): Add FIXME's for h8/300h.  Some
	thought needed here.

	* h8300-tdep.c (print_insn): Call print_insn_h8300h if h8/300h.
	(examine_prologue): reg_save_depth is 4 if h8/300h.

	* findvar.c (read_register): Provide some support for 64 bit regs.
	(write_register): Ditto.
